baml_language/crates/baml_tests/snapshots/diagnostic_errors/removed_dynamic_attribute/baml_tests__diagnostic_errors__removed_dynamic_attribute__03_ppir.snap
---
source: crates/baml_tests/src/generated_tests.rs
---
=== PPIR ===
class user.DynamicClass {
  name: string
}
class user.DynamicClass$stream {
  name: string | null
}
class user.OtherAttrs {
  name: string
}
class user.OtherAttrs$stream {
  name: string | null
}
enum user.DynamicEnum {Red, Green}
