baml_language/crates/baml_tests/snapshots/diagnostic_errors/removed_dynamic_attribute/baml_tests__diagnostic_errors__removed_dynamic_attribute__05_diagnostics.snap
---
source: crates/baml_tests/src/generated_tests.rs
---
=== COMPILER2 DIAGNOSTICS ===
  [hir] E0098

  × `@@dynamic` was removed; runtime type construction is `baml.reflect` (BEP-066)
   ╭─[removed_dynamic_attribute.baml:7:5]
 7 │     @@dynamic
   ·     ────┬────
   ·         ╰── removed attribute
   ╰────

  [hir] E0098

  × `@@dynamic` was removed; runtime type construction is `baml.reflect` (BEP-066)
    ╭─[removed_dynamic_attribute.baml:13:5]
 13 │     @@dynamic
    ·     ────┬────
    ·         ╰── removed attribute
    ╰────
